@@ -75,6 +75,7 @@
     <File name="./Banter/VideoView.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/ChatWindowManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/ChatType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/AudioView.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
