@@ -1,3 +1,10 @@
+2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter.mdp, Banter/AudioView.cs, Banter/Makefile.am: Added AudioView
+	  Class
+	* Banter/VideoView.cs: Pimped out the Video view  NOT!
+	* Banter/ChatWindow.cs: Updatec ChatView to handle events
+
 2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
 
 	added message indication for video chat start and stop
